# Forest-Simulator

./: README.md
work/: CMakeLists.txt
work/prototypes/: tree_prototype.py
work/res/shaders/: fragment_shader.frag  vertex_shader.vert
work/res/trees/: trees.txt  trees2.txt
work/src/: CMakeLists.txt  boid.cpp  boid.hpp  diamond_prototype.py  flock.cpp  flock.hpp  heightmap.cpp  heightmap.hpp  lsystem.cpp  lsystem.hpp  main.cpp  oct_tree.cpp  oct_tree.hpp  tree.cpp  tree.hpp  treefactory.cpp  treefactory.hpp  triangle.hpp
